--- a/JavaStudy/3-2/style2.css
+++ b/JavaStudy/3-2/style2.css
@@ -2,6 +2,12 @@ body{
     width:100%;
 }
 
+.clearfix::after { 
+    content: ''; 
+    display: block; 
+    clear: both;
+}
+
 .wrapper{
     width:400px;
     margin:0 auto;
@@ -65,4 +71,9 @@ body{
     width:400px;
     height:100px;
     background-color:#d98d30;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
